# tfm-2026-discussion-moderation

./: .containerignore  .env.local.example  .envrc  .gitignore  Caddyfile  Containerfile  Makefile  Procfile.dev  README.md  docker-compose.yml  history.db  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug-report.yml  role-client.yml  role-project-manager.yml  role-tech-lead.yml
.github/workflows/: ci.yml
dashboard/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
discussion_moderation/: config.py  constants.py  dev.py  json_repair.py  models.py  playground.py  providers.py  utils.py
discussion_moderation/agents/: __init__.py  base.py  classification.py  classifier.py  facilitator.py  intervention.py  orchestrator.py  role_agent.py  roles.py  writer.py
discussion_moderation/api/: __init__.py  app.py  facilitation.py
discussion_moderation/common/: __init__.py  constants.py  formatters.py  models.py  prompts.py  types.py
discussion_moderation/evals/: __init__.py  artifacts.py  assertions.py  eval_classifier.py  eval_facilitator.py  eval_isolated.py  eval_models.py  eval_pipeline.py  models.py  prepare_judge_inputs.py  render_prompt.py  run_single.py  s3_store.py  sample_threads.py  store.py  summarize_judge_results.py  utils.py
discussion_moderation/graph/: __init__.py  nodes.py  pipeline.py
discussion_moderation/rest_api/: __init__.py  auth.py  main.py  router.py
discussion_moderation/schemas/: discussion.py
discussion_moderation/settings/: __init__.py  config.py
discussion_moderation/tests/: conftest.py  test_agents_base.py  test_agents_wiring.py  test_auth.py  test_backends.py  test_classifier.py  test_common.py  test_config.py  test_dev.py  test_facilitator.py  test_graph.py  test_history.py  test_json_repair.py  test_knowledge_base.py  test_models.py  test_openedx_mapper.py  test_orchestrator.py  test_prepare_judge_inputs.py  test_prompt_builder.py  test_rest_api_eval_runs.py  test_rest_api_live_and_history.py  test_run_experiment_cancellation.py  test_run_results_store.py  test_s3_run_result_store.py  test_schemas.py  test_utils.py
discussion_moderation/tools/: __init__.py  base.py  history.py  knowledge_base.py  openedx.py  protocols.py  stub.py
docs/: README.md  TODO.md  discussion_api_v1.md  experiments.md  forum_api.md  glossary.md  index.html  pipeline.md  playground-example.json  threads_api_output.json
docs/agents/: classification-agent.md  intervention-agent.md  orchestrator-agent.md  role-agents.md
docs/decisions/: 0001-estandares-de-calidad.md  0002-justificacion-y-problema.md  0002-repertorio-de-tecnicas-de-facilitacion.md  0003-modelo-de-intervencion-en-tres-fases.md  0004-roles-de-facilitacion-y-mapeo-a-acciones.md  0005-arquitectura-multi-agente.md  0006-sistemas-de-referencia-para-patrones-del-pipeline.md  0007-historial-de-intervenciones-por-hilo.md  0008-principios-de-temporización-de-la-intervencion.md  0009-estructura-y-criterios-de-calidad-de-prompts.md  0010-punto-de-entrada-de-integracion.md  0011-modelo-minimo-de-discusion.md  0012-modo-de-extraccion-de-salida-estructurada.md  0013-evaluacion-de-respuesta-y-circuito-de-retroalimentacion.md  0014-infraestructura-de-evaluacion-experimental.md  0015-taxonomia-de-estados-de-discusion-etiqueta-unica.md  0016-sesgo-de-ordenacion-en-el-repertorio-de-tecnicas.md  0017-tecnicas-como-herramienta-dinamica.md  (+31 more)
integrations/openedx/forum-intervention-plugin/: pyproject.toml
integrations/openedx/forum-intervention-plugin/forum_intervention_plugin/: __init__.py  apps.py  handlers.py  tasks.py  urls.py  views.py
integrations/openedx/forum-intervention-plugin/forum_intervention_plugin/settings/: __init__.py  common.py
integrations/openedx/tutor/: pyproject.toml
integrations/openedx/tutor/forum_intervention_tutor_plugin/: __init__.py  plugin.py
integrations/openedx/tutor/inline_plugins/: dev_jwt_long_expiry.py  facilitation_override.py
scripts/: ec2_bootstrap.sh  ec2_restart.sh  extract_mooc_threads.py  facilitate_course.py  mooc_thread_candidates.json  seed_ai_ethics.py  seed_discussions.py  seed_programming_intro.py  server_bootstrap.sh  server_restart.sh  server_restart_api.sh  server_setup.sh
(+538 files in other folders)
