[project]
name = "discussion-moderation"
version = "0.2.0"
description = "Intelligent facilitation of academic discussions"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.28",
    "pydantic-ai>=0.2",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.34",
]

[project.scripts]
eval-classifier = "discussion_moderation.evals.eval_classifier:main"
eval-pipeline = "discussion_moderation.evals.eval_pipeline:main"
pipeline-diagram = "discussion_moderation.graph.pipeline:print_diagram"
facilitate = "discussion_moderation.playground:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]

[tool.pytest.ini_options]
testpaths = ["discussion_moderation/tests"]
