[project]
name = "discussion-moderation"
version = "0.2.0"
description = "Intelligent facilitation of academic discussions"
requires-python = ">=3.12"
dependencies = [
    "boto3",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.115",
    "httpx>=0.28",
    "logfire>=4.28.0",
    "pydantic-ai>=0.2",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.34",
]

[project.scripts]
eval-classifier = "discussion_moderation.evals.eval_classifier:main"
eval-pipeline = "discussion_moderation.evals.eval_pipeline:main"
eval-models = "discussion_moderation.evals.eval_models:main"
eval-models-isolated = "discussion_moderation.evals.eval_isolated:main"
prepare-judge-inputs = "discussion_moderation.evals.prepare_judge_inputs:main"
summarize-judge-results = "discussion_moderation.evals.summarize_judge_results:main"
render-prompt = "discussion_moderation.evals.render_prompt:main"
pipeline-diagram = "discussion_moderation.graph.pipeline:print_diagram"
facilitate = "discussion_moderation.playground:main"

[project.optional-dependencies]
dev = [
    "honcho>=2.0",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.9",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["discussion_moderation*"]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"discussion_moderation/tools/knowledge_base.py" = ["E501"]
"scripts/*.py" = ["E501", "E402", "I001"]

[tool.pytest.ini_options]
testpaths = ["discussion_moderation/tests"]
